--- a/onlinematerial.html
+++ b/onlinematerial.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1> <a href="/e-project/index.html"><span>></span></a> Online Study Materials</h1>
+    <h1> <a href="./index.html"><span>></span></a> Online Study Materials</h1>
     <div class="main">
         <div class="cards">
             <div class="card one">
